--- a/src/Leagueoflegends.Navigate/Themes/Views/OptionMenuContent.xaml
+++ b/src/Leagueoflegends.Navigate/Themes/Views/OptionMenuContent.xaml
@@ -19,7 +19,7 @@
           <StackPanel>
             <TextBlock Style="{StaticResource CategoryTextStyle}" Text="CLIENT"/>
             <units:RiotOptionMenuButton Command="{Binding MenuCommand}" CommandParameter="General" Content="GENERAL" IsChecked="True"/>
-            <units:RiotOptionMenuButton Command="{Binding MenuCommand}" CommandParameter="Notification" Content="NOTIFICATION"/>
+            <units:RiotOptionMenuButton Command="{Binding MenuCommand}" CommandParameter="Notice" Content="NOTIFICATION"/>
             <units:RiotOptionMenuButton Command="{Binding MenuCommand}" CommandParameter="GENERAL" Content="CHAT/FRIENDS"/>
             <units:RiotOptionMenuButton Command="{Binding MenuCommand}" CommandParameter="GENERAL" Content="SOUND"/>
             <units:RiotOptionMenuButton Command="{Binding MenuCommand}" CommandParameter="GENERAL" Content="VOICE"/>
