--- a/src/Leagueoflegends.Settings/Themes/Generic.xaml
+++ b/src/Leagueoflegends.Settings/Themes/Generic.xaml
@@ -2,6 +2,7 @@
   xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
   <ResourceDictionary.MergedDictionaries>
+    <ResourceDictionary Source="ms-appx:///Leagueoflegends.Settings/Themes/Views/NoticeContent.xaml"/>
     <ResourceDictionary Source="ms-appx:///Leagueoflegends.Settings/Themes/Views/GeneralContent.xaml"/>
   </ResourceDictionary.MergedDictionaries>
 </ResourceDictionary>
