--- a/src/Leagueoflegends.Support/Themes/Units/RiotOptionMenuButton.xaml
+++ b/src/Leagueoflegends.Support/Themes/Units/RiotOptionMenuButton.xaml
@@ -1,7 +1,7 @@
 ﻿<ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Leagueoflegends.Support.UI.Units">
+    xmlns:units="using:Leagueoflegends.Support.UI.Units">
 
   <Style x:Key="MenuBorderStyle" TargetType="Border">
     <Setter Property="Background" Value="Transparent"/>
@@ -18,15 +18,14 @@
     <Setter Property="Margin" Value="10,0,0,0"/>
   </Style>
 
-  <Style TargetType="local:RiotOptionMenuButton">
+  <Style TargetType="units:RiotOptionMenuButton">
     <Setter Property="Background" Value="Transparent"/>
     <Setter Property="Padding" Value="14,3,6,3"/>
     <Setter Property="FontSize" Value="12"/>
-    <Setter Property="FontWeight" Value="Bold"/>
     <Setter Property="GroupName" Value="SETTINGS"/>
     <Setter Property="Template">
       <Setter.Value>
-        <ControlTemplate TargetType="local:RiotOptionMenuButton">
+        <ControlTemplate TargetType="units:RiotOptionMenuButton">
           <Grid>
             <VisualStateManager.VisualStateGroups>
               <VisualStateGroup x:Name="CommonStates">
@@ -50,18 +49,17 @@
                     <Setter Target="text.Foreground" Value="#DBD3C2"/>
                     <Setter Target="text.Margin" Value="14,0,0,0"/>
                     <Setter Target="border.Visibility" Value="Visible"/>
+                    <Setter Target="background.Background" Value="#551E2328"/>
                   </VisualState.Setters>
                 </VisualState>
                 <VisualState x:Name="Unchecked"/>
               </VisualStateGroup>
             </VisualStateManager.VisualStateGroups>
+            <Border x:Name="background" Background="Transparent"/>
             <Border x:Name="menu" Style="{StaticResource MenuBorderStyle}">
               <Grid>
                 <Border x:Name="border" Style="{StaticResource IndicatorBorderStyle}"/>
-                <TextBlock x:Name="text"
-                  Text="{TemplateBinding Content}" 
-                  Padding="{TemplateBinding Padding}"
-                  Style="{StaticResource MenuTextStyle}"/>
+                <TextBlock x:Name="text" Style="{StaticResource MenuTextStyle}" Text="{TemplateBinding Content}" Padding="{TemplateBinding Padding}"/>
               </Grid>
             </Border>
           </Grid>
