--- a/src/Leagueoflegends.Clash/Themes/Views/HubContent.xaml
+++ b/src/Leagueoflegends.Clash/Themes/Views/HubContent.xaml
@@ -2,7 +2,10 @@
   xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
   xmlns:units="using:Leagueoflegends.Support.UI.Units"
+  xmlns:cnvts="using:Leagueoflegends.Clash.Local.Converters"
   xmlns:views="using:Leagueoflegends.Clash.UI.Views">
+
+  <cnvts:ShowMenuConverter x:Key="ShowMenuConverter"/>
 
   <Style TargetType="views:HubContent">
     <Setter Property="Margin" Value="0 60 0 0"/>
@@ -12,8 +15,8 @@
           <Grid ColumnDefinitions="Auto, *">
             <units:RiotHubSummary/>
             <Grid Grid.Column="1" RowDefinitions="Auto, *" Margin="30">
-              <units:RiotTabMenu ItemsSource="{Binding TabMenus}" SelectedItem="{Binding CurrentTabMenu}"/>
-              <units:RiotScheduleListBox Grid.Row="1" ItemsSource="{Binding Schedules}"/>
+              <units:RiotTabMenu ItemsSource="{Binding TabMenus}" SelectedItem="{Binding CurrentTabMenu, Mode=TwoWay}"/>
+              <units:RiotScheduleListBox Grid.Row="1" ItemsSource="{Binding Schedules}" Visibility="{Binding CurrentTabMenu, Converter={StaticResource ShowMenuConverter}, ConverterParameter=SCHEDULE}"/>
             </Grid>
           </Grid>
         </ControlTemplate>
